# ableton-mcp

./: pyproject.toml
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/phases/01-foundation-repair/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-infrastructure-refactor/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-track-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-UAT.md  (+9 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  music21-integration.md
AbletonMCP_Remote_Script/: __init__.py  registry.py
AbletonMCP_Remote_Script/handlers/: __init__.py  arrangement.py  audio_clips.py  automation.py  base.py  browser.py  clips.py  devices.py  grooves.py  mixer.py  mixer_helpers.py  notes.py  routing.py  scaffold.py  scenes.py  tracks.py  transport.py
MCP_Server/: __init__.py  connection.py  protocol.py  server.py
MCP_Server/devices/: __init__.py  catalog.py
MCP_Server/genres/: __init__.py  ambient.py  catalog.py  disco_funk.py  drum_and_bass.py  dubstep.py  future_bass.py  hip_hop_trap.py  house.py  lo_fi.py  neo_soul_rnb.py  schema.py  synthwave.py  techno.py  trance.py
MCP_Server/theory/: __init__.py  analysis.py  chords.py  pitch.py  progressions.py  rhythm.py  scales.py  voicing.py
MCP_Server/tools/: __init__.py  arrangement.py  audio_clips.py  automation.py  browser.py  catalog.py  clips.py  devices.py  execution.py  genres.py  grooves.py  mixer.py  notes.py  plans.py  routing.py  scaffold.py  scenes.py  session.py  theory.py  tracks.py  transport.py
scripts/: bootstrap_catalog.py
tests/: conftest.py  live_uat_07.py  test_arrangement.py  test_arrangement_extension.py  test_audio_clips.py  test_automation.py  test_browser.py  test_catalog.py  test_clips.py  test_connection.py  test_devices.py  test_dispatch.py  test_execution.py  test_genre_quality.py  test_genre_tools.py  test_genres.py  test_grooves.py  test_instrument_loading.py  test_mixer.py  test_notes.py  test_palette.py  test_plan_tools.py  test_protocol.py  test_python3_cleanup.py  test_registry.py  test_routing.py  test_scaffold.py  test_scenes.py  test_session.py  test_theory.py  test_tracks.py  test_transport.py
(+239 files in other folders)
